apps/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: staging.devops-toolkit
  annotations:
    kubernetes.io/ingress.class: nginx
    argocd.argoproj.io/compare-options: IgnoreExtraneous
spec:
  rules:
  - host: staging.devops-toolkit.apps.okd.ag04.io
    http:
      paths:
      - backend:
          serviceName: devops-toolkit-staging-devops-toolkit-staging-devops-toolkit
          servicePort: http
